# wtfwtfwtf

./: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  env.example  env.production.example  events_bot.db  main.py  pyproject.toml
.github/workflows/: dependencies.yml
aws/: .gitignore  buckets.sh  check-buckets.sh
events_bot/: __init__.py  database
events_bot/bot/: __init__.py  middleware.py
events_bot/bot/handlers/: __init__.py  callback_handlers.py  feed_handlers.py  moderation_handlers.py  post_handlers.py  start_handler.py  user_handlers.py
events_bot/bot/keyboards/: __init__.py  category_keyboard.py  city_keyboard.py  feed_keyboard.py  link_keyboard.py  main_keyboard.py  moderation_keyboard.py  post_keyboard.py
events_bot/bot/states/: __init__.py  moderation_states.py  post_states.py  user_states.py
events_bot/bot/utils/: __init__.py  database.py  notifications.py
events_bot/database/: __init__.py  connection.py  init_db.py  models.py
events_bot/database/bot/handlers/: user_handlers.py
events_bot/database/repositories/: __init__.py  category_repository.py  like_repository.py  moderation_repository.py  post_repository.py  user_repository.py
events_bot/database/services/: __init__.py  category_service.py  like_service.py  moderation_service.py  notification_service.py  post_service.py  user_service.py
events_bot/storage/: __init__.py  file_storage.py  interfaces.py  s3_storage.py
events_bot/tasks/: cleanup.py
